pom modifications to get the appengine sdk root correct